updated LandMasking With GUI using GeoTIFF

--- a/LandMasking/PreProcess_LM.ipynb
+++ b/LandMasking/PreProcess_LM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,8 +61,7 @@
     "\n",
     "    parameters.put('targetBands', targetBands)\n",
     "    output = GPF.createProduct('BandMaths', parameters, result)\n",
-    "    ProductIO.writeProduct(output, str(output_path)+\"/LandMasked_\"+str(band), 'BEAM-DIMAP')\n",
-    "    ProductIO.writeProduct(output, str(output_path)+\"/LandMasked_\"+str(band), 'PNG')\n",
+    "    ProductIO.writeProduct(output, str(output_path)+\"/LandMasked_\"+str(band), 'GeoTIFF')\n",
     "    return output\n",
     "\n",
     "\n",
@@ -94,11 +93,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#product = import_product('Dataset_4B22/subset_4_of_S1A_IW_GRDH_1SDV_20201016T143756_20201016T143825_034823_040F13_4B22_TC.dim')\n",
+    "#product = import_product('Dataset_3CC2/subset_2_of_S1A_IW_GRDH_1SDV_20201012T020745_20201012T020810_034757_040CBF_3CC2_TC.tif')\n",
     "#band_d = bands(product)\n",
     "#print(band_d)\n",
     "#bandVisulization(product,band_d[0])"
