Updating CFAR kernel

--- a/AdaptiveThresholdAlgo/CFAR.ipynb
+++ b/AdaptiveThresholdAlgo/CFAR.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,114 +25,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Getting sliding window\n",
-    "#img is the image and m is the size of window (eg 3x3, 5x5)\n",
-    "def sliding_window(img,kernel):\n",
+    "class CFAR(object):\n",
     "    \n",
-    "         #make the loop for 3 and 5.\n",
-    "    s = img.shape[0]\n",
-    "    for i in range(int(kernel/2)):\n",
-    "        z = np.zeros([s,1])\n",
-    "        img = np.concatenate((z,img),axis=1)\n",
-    "            \n",
-    "        z = np.zeros([s,1])\n",
-    "        img = np.concatenate((img,z),axis=1)\n",
-    "            \n",
-    "        s = s+2\n",
-    "            \n",
-    "        z = np.zeros([1,s])\n",
-    "        img = np.concatenate((img,z),axis=0)\n",
-    "            \n",
-    "        z = np.zeros([1,s])\n",
-    "        img = np.concatenate((z,img),axis=0)    \n",
-    "            \n",
-    "    \n",
-    "    window= []\n",
-    "    stepSize = 1\n",
-    "    w_width = kernel\n",
-    "    w_height = w_width\n",
-    "    for x in range(0,  img.shape[1] - w_width +1, stepSize):\n",
-    "        for y in range(0, img.shape[0] - w_height +1, stepSize):\n",
-    "            window.append(img[x:x + w_width, y:y + w_height])\n",
-    "    \n",
-    "    window = np.array(window)\n",
-    "    return window\n",
+    "    def __init__(self,img,bw,gw,tw,pfa,kernel):\n",
+    "        self.bw = bw\n",
+    "        self.gw = gw\n",
+    "        self.tw = tw\n",
+    "        self.pfa = pfa\n",
+    "        self.kernel = kernel\n",
+    "        self.img = self.mean_filter(img)\n",
+    "        self.sf = self.scaleFactor()\n",
+    "        self.dvi_img = []\n",
+    "        self.p_img = []\n",
+    "        self.finalImg = []\n",
+    "        print(\"Kernel Ready...\")\n",
+    "\n",
+    "    # Getting sliding window\n",
+    "    #img is the image and m is the size of window (eg 3x3, 5x5)\n",
+    "    def Shipdetection(self):\n",
+    "        print(\"ShipDetection Procecss has started...\")\n",
+    "             #make the loop for 3 and 5.\n",
+    "        s,k = self.img.shape\n",
+    "        for i in range(int(self.bw/2)):\n",
+    "            z = np.zeros([s,1])\n",
+    "            self.img = np.concatenate((z,self.img),axis=1)\n",
+    "\n",
+    "            z = np.zeros([s,1])\n",
+    "            self.img = np.concatenate((self.img,z),axis=1)\n",
+    "\n",
+    "            s = s+2\n",
+    "\n",
+    "            z = np.zeros([1,s])\n",
+    "            self.img = np.concatenate((self.img,z),axis=0)\n",
+    "\n",
+    "            z = np.zeros([1,s])\n",
+    "            self.img = np.concatenate((z,self.img),axis=0)    \n",
     "\n",
     "\n",
-    "#getting center_pixel for every sliding window\n",
-    "def get_center_pixel(window):\n",
-    "    x_i = int(len(window)/2)\n",
-    "    return window[x_i][x_i]\n",
+    "        stepSize = 1\n",
+    "        w_width = self.bw\n",
+    "        w_height = w_width\n",
+    "        print(\"Computing DVI and noise...\")\n",
+    "        for x in range(0,  self.img.shape[1] - w_width +1, stepSize):\n",
+    "            for y in range(0, self.img.shape[0] - w_height +1, stepSize):\n",
+    "                window= np.array(self.img[x:x + w_width, y:y + w_height])\n",
+    "                \n",
+    "                guard,noise = (self.get_GuardWindow(window))\n",
+    "                P = self.noisePower(noise)\n",
+    "                #P = 230\n",
+    "                \n",
+    "                target,back = self.get_TargetWindow(guard)\n",
+    "                Dvi = self.DetectionVariable(target,back)\n",
+    "                self.dvi_img.append(Dvi)\n",
     "\n",
-    "#getting mean of sliding window\n",
-    "def getMean(window):\n",
-    "    return window.mean()\n",
+    "                T = self.sf*P\n",
+    "                self.p_img.append(T)\n",
     "\n",
-    "#getting stdev of sliding window\n",
-    "def getStdev(window):\n",
-    "    return window.std()  \n",
-    "\n",
-    "#computing threshold for the sliding window\n",
-    "def DetectionVariable(window):\n",
-    "    center_pixel = get_center_pixel(window)\n",
-    "    #print(center_pixel)\n",
-    "    win_mean = getMean(window)\n",
-    "    #print(win_mean)\n",
-    "    win_stdev = getStdev(window)\n",
-    "    #print(win_stdev)\n",
-    "    return (abs(center_pixel-win_mean)/win_stdev)\n",
-    "\n",
-    "#plotting binary image for the specific threshold.\n",
-    "#here img_d always takes ndarray.\n",
-    "def shipDetection_binaryImg(img_d,threshold):\n",
-    "    for i in range(len(img_d)):\n",
-    "        if img_d[i] >= threshold:\n",
-    "            img_d[i] = 1      #Valid ship\n",
-    "        else:\n",
-    "            img_d[i] = 0      #not a ship\n",
+    "                if Dvi > T:\n",
+    "                    self.finalImg.append(0)\n",
+    "                else:\n",
+    "                    self.finalImg.append(1) #Valid Ships \n",
     "        \n",
-    "    img_size = int(math.sqrt(len(img_d)))\n",
-    "    img_d_img = img_d.reshape(img_size,img_size)\n",
-    "    return img_d_img\n",
+    "        self.finalImg = np.array(self.finalImg).reshape(k,k)\n",
+    "        print(\"Process Completed.\")\n",
+    "        return self.finalImg\n",
     "\n",
-    "#Computing the target window of size 3x3 and returning along with the\n",
-    "#background pixels\n",
-    "def get_TargetWindow(img,bw,tw):\n",
-    "    s = []\n",
-    "    i = -int(tw/2)\n",
-    "    #print(i)\n",
-    "    for _ in range(tw):\n",
-    "        #s = [img[int(bw/2)-1][int(bw/2)-1:int(bw/2)+2], img[int(bw/2)][int(bw/2)-1:int(bw/2)+2], img[int(bw/2)+1][int(bw/2)-1:int(bw/2)+2]]\n",
-    "        s.append(img[int(bw/2)+i][int(bw/2)-int(tw/2):int(bw/2)+int(tw/2)+1])\n",
-    "        i += 1\n",
-    "        \n",
-    "    s = (np.array(s))\n",
     "    \n",
-    "    background = []\n",
-    "    for z in img:\n",
-    "        for t in z:\n",
-    "            if t in s:\n",
-    "                pass\n",
+    "    \n",
+    "    def get_sf(self):\n",
+    "        return self.sf\n",
+    "    \n",
+    "    def get_dvImage(self):\n",
+    "        return self.dvi_img\n",
+    "    \n",
+    "    def get_pImage(self):\n",
+    "        return self.p_img\n",
+    "    \n",
+    "    #getting center_pixel for every sliding window\n",
+    "    def get_center_pixel(self,window):\n",
+    "        x_i = int(len(window)/2)\n",
+    "        return window[x_i][x_i]\n",
+    "\n",
+    "    #getting mean of sliding window\n",
+    "    def getMean(self,window):\n",
+    "        return window.mean()\n",
+    "\n",
+    "    #getting stdev of sliding window\n",
+    "    def getStdev(self,window):\n",
+    "        return window.std()  \n",
+    "\n",
+    "    def DVmean(self,arr):\n",
+    "        s = 0.0\n",
+    "        for i in arr:\n",
+    "            s += i\n",
+    "        return (s/((self.gw**2)-(self.tw**2)))\n",
+    "\n",
+    "    def DVstd(self,arr,mean):\n",
+    "        s = 0.0\n",
+    "        l = self.gw**2 - self.tw**2\n",
+    "        for i in range(l):\n",
+    "            if i > len(arr)-1:\n",
+    "                s += mean**2\n",
     "            else:\n",
-    "                background.append(t)\n",
-    "    background = np.array(background)\n",
-    "    return [s,background]\n",
-    "    \n",
-    "def noisePower(arr,bw,tw):\n",
-    "    s = 0.0\n",
-    "    for i in arr:\n",
-    "        s += i\n",
-    "    return (s/((bw**2)-(tw**2)))\n",
+    "                res = (arr[i] - mean)**2\n",
+    "                s += res\n",
+    "        return np.sqrt(s/(l-1))\n",
     "\n",
-    "def scaleFactor(pfa,backgroundWindow_size,targetWindow_size):\n",
-    "    N = backgroundWindow_size**2 - targetWindow_size**2\n",
-    "    alpha = N*(pfa**(-1/N) -1)\n",
-    "    return alpha"
+    "\n",
+    "    #computing threshold for the sliding window\n",
+    "    def DetectionVariable(self,window,arr):\n",
+    "        center_pixel = self.get_center_pixel(window)\n",
+    "        #print(center_pixel)\n",
+    "        win_mean = self.DVmean(arr)\n",
+    "        #win_mean = getMean(window)\n",
+    "        #print(win_mean)\n",
+    "        win_stdev = self.DVstd(arr,win_mean)\n",
+    "        #win_stdev = getStdev(window)\n",
+    "        #print(win_stdev)\n",
+    "        return (abs(center_pixel-win_mean)/win_stdev)\n",
+    "\n",
+    "    #Computing the target window of size 3x3 and returning along with the\n",
+    "    #background pixels\n",
+    "    def get_TargetWindow(self,img):\n",
+    "        s = []\n",
+    "        i = -int(self.tw/2)\n",
+    "        #print(i)\n",
+    "        for _ in range(self.tw):\n",
+    "            #s = [img[int(bw/2)-1][int(bw/2)-1:int(bw/2)+2], img[int(bw/2)][int(bw/2)-1:int(bw/2)+2], img[int(bw/2)+1][int(bw/2)-1:int(bw/2)+2]]\n",
+    "            s.append(img[int(self.gw/2)+i][int(self.gw/2)-int(self.tw/2):int(self.gw/2)+int(self.tw/2)+1])\n",
+    "            i += 1\n",
+    "\n",
+    "        s = (np.array(s))\n",
+    "\n",
+    "        background = []\n",
+    "        for z in img:\n",
+    "            for t in z:\n",
+    "                if t in s:\n",
+    "                    pass\n",
+    "                else:\n",
+    "                    background.append(t)\n",
+    "        background = np.array(background)\n",
+    "        return [s,background]\n",
+    "\n",
+    "    def get_GuardWindow(self,img):\n",
+    "        s = []\n",
+    "        i = -int(self.gw/2)\n",
+    "        #print(i)\n",
+    "        for _ in range(self.gw):\n",
+    "            #s = [img[int(bw/2)-1][int(bw/2)-1:int(bw/2)+2], img[int(bw/2)][int(bw/2)-1:int(bw/2)+2], img[int(bw/2)+1][int(bw/2)-1:int(bw/2)+2]]\n",
+    "            s.append(img[int(self.bw/2)+i][int(self.bw/2)-int(self.gw/2):int(self.bw/2)+int(self.gw/2)+1])\n",
+    "            i += 1\n",
+    "\n",
+    "        s = (np.array(s))\n",
+    "\n",
+    "        background = []\n",
+    "        for z in img:\n",
+    "            for t in z:\n",
+    "                if t in s:\n",
+    "                    pass\n",
+    "                else:\n",
+    "                    background.append(t)\n",
+    "        background = np.array(background)\n",
+    "        return [s,background]\n",
+    "\n",
+    "    def noisePower(self,arr):\n",
+    "        s = 0.0\n",
+    "        for i in arr:\n",
+    "            s += i\n",
+    "        return (s/((self.bw**2)-(self.gw**2)))\n",
+    "\n",
+    "    def scaleFactor(self):\n",
+    "        N = self.bw**2 - self.gw**2\n",
+    "        alpha = N*(self.pfa**(-1/N) -1)\n",
+    "        return alpha\n",
+    "\n",
+    "    def mean_filter(self,img):\n",
+    "\n",
+    "        s,k = img.shape\n",
+    "        for i in range(int(self.kernel/2)):\n",
+    "            z = np.zeros([s,1])\n",
+    "            img = np.concatenate((z,img),axis=1)\n",
+    "\n",
+    "            z = np.zeros([s,1])\n",
+    "            img = np.concatenate((img,z),axis=1)\n",
+    "\n",
+    "            s = s+2\n",
+    "\n",
+    "            z = np.zeros([1,s])\n",
+    "            img = np.concatenate((img,z),axis=0)\n",
+    "\n",
+    "            z = np.zeros([1,s])\n",
+    "            img = np.concatenate((z,img),axis=0)    \n",
+    "\n",
+    "        \n",
+    "        mean_filter_img = []\n",
+    "        stepSize = 1\n",
+    "        w_width = self.kernel\n",
+    "        w_height = w_width\n",
+    "        for x in range(0,  img.shape[1] - w_width +1, stepSize):\n",
+    "            for y in range(0, img.shape[0] - w_height +1, stepSize):\n",
+    "                window = np.array(img[x:x + w_width, y:y + w_height])\n",
+    "\n",
+    "                cal_mean = self.getMean(window)\n",
+    "                mean_filter_img.append(cal_mean)\n",
+    "\n",
+    "        mean_filter_img = np.array(mean_filter_img).reshape(k,k)\n",
+    "        return mean_filter_img"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
