--- a/AdaptiveThresholdAlgo/CFAR.ipynb
+++ b/AdaptiveThresholdAlgo/CFAR.ipynb
@@ -9,11 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from tqdm.notebook import tqdm"
    ]
   },
   {
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +71,7 @@
     "        w_width = self.bw\n",
     "        w_height = w_width\n",
     "        print(\"Computing DVI and noise...\")\n",
-    "        for x in range(0,  self.img.shape[1] - w_width +1, stepSize):\n",
+    "        for x in tqdm(range(0,  self.img.shape[1] - w_width +1, stepSize)):\n",
     "            for y in range(0, self.img.shape[0] - w_height +1, stepSize):\n",
     "                window= np.array(self.img[x:x + w_width, y:y + w_height])\n",
     "                \n",
@@ -122,18 +123,18 @@
     "        s = 0.0\n",
     "        for i in arr:\n",
     "            s += i\n",
-    "        return (s/((self.gw**2)-(self.tw**2)))\n",
+    "        return (s/((self.bw**2)-(self.tw**2)))\n",
     "\n",
     "    def DVstd(self,arr,mean):\n",
     "        s = 0.0\n",
-    "        l = self.gw**2 - self.tw**2\n",
+    "        l = self.bw**2 - self.tw**2\n",
     "        for i in range(l):\n",
     "            if i > len(arr)-1:\n",
     "                s += mean**2\n",
     "            else:\n",
     "                res = (arr[i] - mean)**2\n",
     "                s += res\n",
-    "        return np.sqrt(s/(l-1))\n",
+    "        return np.sqrt(s/(l))\n",
     "\n",
     "\n",
     "    #computing threshold for the sliding window\n",
@@ -196,10 +197,10 @@
     "        s = 0.0\n",
     "        for i in arr:\n",
     "            s += i\n",
-    "        return (s/((self.bw**2)-(self.gw**2)))\n",
+    "        return (s/((self.bw**2)-(self.tw**2)))\n",
     "\n",
     "    def scaleFactor(self):\n",
-    "        N = self.bw**2 - self.gw**2\n",
+    "        N = self.bw**2 - self.tw**2\n",
     "        alpha = N*(self.pfa**(-1/N) -1)\n",
     "        return alpha\n",
     "\n",
