CFAR Filter Works fine

--- a/AdaptiveThresholdAlgo/GeoProcess.ipynb
+++ b/AdaptiveThresholdAlgo/GeoProcess.ipynb
@@ -38,7 +38,7 @@
     "    r,c = img.shape\n",
     "    pr_d = gdal.Open(DATA_PATH+'LandMasked_Amplitude_VV.tif')\n",
     "    driver = gdal.GetDriverByName(\"GTiff\")\n",
-    "    outdata = driver.Create(filename, r, c, 1, gdal.GDT_Float32)\n",
+    "    outdata = driver.Create(filename, c, r, 1, gdal.GDT_Float32)\n",
     "    outdata.SetGeoTransform(pr_d.GetGeoTransform())##sets same geotransform as input\n",
     "    outdata.SetProjection(pr_d.GetProjection())##sets same projection as input\n",
     "    outdata.GetRasterBand(1).WriteArray(img)\n",
@@ -67,7 +67,16 @@
     "    plt.imshow(img,cmap='gray',vmax=255,vmin=0)\n",
     "\n",
     "def visualizeBinaryImg(img):\n",
-    "    plt.imshow(img,cmap='gray')"
+    "    plt.imshow(img,cmap='gray')\n",
+    "\n",
+    "def getLatLong(img,i,j):\n",
+    "    pr_d = gdal.Open(DATA_PATH+'LandMasked_Amplitude_VV.tif')\n",
+    "    xoff, a, b, yoff, d, e = pr_d.GetGeoTransform()\n",
+    "    \n",
+    "    px = (a * i) + (b * j) + xoff\n",
+    "    py = (d * i) + (e * j) + yoff \n",
+    "    \n",
+    "    return (px,py)"
    ]
   },
   {
