--- a/AdaptiveThresholdAlgo/CFAR_v2.ipynb
+++ b/AdaptiveThresholdAlgo/CFAR_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
     "        radius_t = int(size_t/2)\n",
     "        radius_g = int(size_g/2)\n",
     "        #we have considered the target_window pixels too.\n",
-    "        for p in range(radius_t+1,radius_g+1):\n",
+    "        for p in range(radius_t,radius_g+1):\n",
     "                        \n",
     "            x = u-p\n",
     "            for m in range(-p,p+1):\n",
@@ -65,7 +65,7 @@
     "        bottom_buffer = []\n",
     "        radius_t = int(size_t/2)\n",
     "        radius_g = int(size_g/2)\n",
-    "        for p in range(radius_t+1,radius_g+1):\n",
+    "        for p in range(radius_t,radius_g+1):\n",
     "            \n",
     "            x = u+p\n",
     "            for m in range(-p,p+1):\n",
@@ -84,7 +84,7 @@
     "        left_buffer = []\n",
     "        radius_t = int(size_t/2)\n",
     "        radius_g = int(size_g/2)\n",
-    "        for p in range(radius_t+1,radius_g+1):\n",
+    "        for p in range(radius_t,radius_g+1):\n",
     "            y = v-p\n",
     "            for m in range(-p,p+1):\n",
     "                x = u+m\n",
@@ -102,7 +102,7 @@
     "        right_buffer = []\n",
     "        radius_t = int(size_t/2)\n",
     "        radius_g = int(size_g/2)\n",
-    "        for p in range(radius_t+1,radius_g+1):\n",
+    "        for p in range(radius_t,radius_g+1):\n",
     "            y = v+p\n",
     "            for m in range(-p,p+1):\n",
     "                x = u+m\n",
@@ -124,10 +124,10 @@
     "        for i in tqdm(range(self.img.shape[0])):\n",
     "            for j in (range(self.img.shape[1])):\n",
     "                #print(\"hello\")\n",
-    "                win_top_buffer = self.get_topBuffer(i,j,self.tw,self.gw)\n",
-    "                win_bottom_buffer = self.get_bottomBuffer(i,j,self.tw,self.gw)\n",
-    "                win_left_buffer = self.get_leftBuffer(i,j,self.tw,self.gw)\n",
-    "                win_right_buffer = self.get_rightBuffer(i,j,self.tw,self.gw)\n",
+    "                win_top_buffer = self.get_topBuffer(i,j,self.tw,self.bw)\n",
+    "                win_bottom_buffer = self.get_bottomBuffer(i,j,self.tw,self.bw)\n",
+    "                win_left_buffer = self.get_leftBuffer(i,j,self.tw,self.bw)\n",
+    "                win_right_buffer = self.get_rightBuffer(i,j,self.tw,self.bw)\n",
     "\n",
     "                guard_buffer = np.array(\n",
     "\n",
@@ -135,11 +135,7 @@
     "\n",
     "                )\n",
     "\n",
-    "                #print(guard_buffer)\n",
-    "                #print(guard_buffer.mean())\n",
-    "                #print(guard_buffer.std())\n",
-    "                #print((img[i][j] - guard_buffer.mean())/guard_buffer.std())\n",
-    "                dvi.append(abs(self.img[i][j] - guard_buffer.mean())/guard_buffer.std())\n",
+    "                dvi.append((self.img[i][j] - guard_buffer.mean())/guard_buffer.std())\n",
     "\n",
     "        dvi = np.array(dvi).reshape(self.img.shape)\n",
     "        print(\"Process completed, DV image succesfully Computed.\\n\")\n",
@@ -166,12 +162,13 @@
     "\n",
     "                #print(guard_buffer)\n",
     "                #print(guard_buffer.mean())\n",
-    "                noise_data.append(background_buffer.mean())\n",
+    "                noise_data.append(float(background_buffer.mean()))\n",
     "                \n",
-    "        noise_data = (np.array(noise_data)).reshape(self.img.shape)\n",
-    "        P = self.compute_scaleFactor()*noise_data\n",
+    "        noise_data = (np.array(noise_data))\n",
+    "        #print(noise_data)\n",
+    "        P = np.array(self.compute_scaleFactor()*noise_data).reshape(self.img.shape)\n",
     "        print(\"Process Completed, P image succesfully computed.\\n\")\n",
-    "        return noise_data\n",
+    "        return P\n",
     "    \n",
     "    def compute_scaleFactor(self):\n",
     "        N = 0\n",
@@ -183,30 +180,23 @@
     "    def shipDetection(self):\n",
     "        final_image = []\n",
     "        \n",
-    "        T = self.compute_noise()\n",
-    "        #T= 30\n",
+    "        #T = self.compute_noise()\n",
+    "        T = self.pfa\n",
     "        DV = self.compute_DV()\n",
     "        \n",
     "        for i in range(self.img.shape[0]):\n",
     "            for j in range(self.img.shape[1]):\n",
     "                \n",
-    "                if DV[i][j] > T[i][j]:\n",
+    "                if DV[i][j] > T:\n",
     "                    \n",
-    "                    final_image.append(0)\n",
+    "                    final_image.append(1)\n",
     "                else:\n",
-    "                    final_image.append(1) #valid Ships\n",
+    "                    final_image.append(0) #valid Ships\n",
     "        \n",
     "        final_image = np.array(final_image).reshape(self.img.shape)\n",
     "        print(\"Binary Image of Ships is Succesfully Generated.\\n\")\n",
     "        return final_image,DV,T"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
