VH Channel Ship Detected Successfully

--- a/AdaptiveThresholdAlgo/GeoProcess.ipynb
+++ b/AdaptiveThresholdAlgo/GeoProcess.ipynb
@@ -16,7 +16,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import math\n",
-    "from osgeo import gdal,gdal_array\n",
+    "from osgeo import gdal,gdal_array,ogr\n",
     "\n",
     "DATA_PATH = 'Dataset_963A/'"
    ]
@@ -78,13 +78,6 @@
     "    \n",
     "    return (px,py)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
