--- a/AdaptiveThresholdAlgo/CFAR_v2.ipynb
+++ b/AdaptiveThresholdAlgo/CFAR_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,10 +43,9 @@
     "    #Computing 4 buffer values.TOP,BOTTOM,LEFT and RIGHT\n",
     "    def get_topBuffer(self,u,v,size_t,size_g):\n",
     "        top_buffer = []\n",
-    "        radius_t = int(size_t/2)\n",
-    "        radius_g = int(size_g/2)\n",
+    "\n",
     "        #we have considered the target_window pixels too.\n",
-    "        for p in range(radius_t,radius_g+1):\n",
+    "        for p in range(size_t,size_g+1):\n",
     "                        \n",
     "            x = u-p\n",
     "            for m in range(-p,p+1):\n",
@@ -63,9 +62,8 @@
     "\n",
     "    def get_bottomBuffer(self,u,v,size_t,size_g):\n",
     "        bottom_buffer = []\n",
-    "        radius_t = int(size_t/2)\n",
-    "        radius_g = int(size_g/2)\n",
-    "        for p in range(radius_t,radius_g+1):\n",
+    "        \n",
+    "        for p in range(size_t,size_g+1):\n",
     "            \n",
     "            x = u+p\n",
     "            for m in range(-p,p+1):\n",
@@ -82,9 +80,7 @@
     "\n",
     "    def get_leftBuffer(self,u,v,size_t, size_g):\n",
     "        left_buffer = []\n",
-    "        radius_t = int(size_t/2)\n",
-    "        radius_g = int(size_g/2)\n",
-    "        for p in range(radius_t,radius_g+1):\n",
+    "        for p in range(size_t,size_g+1):\n",
     "            y = v-p\n",
     "            for m in range(-p,p+1):\n",
     "                x = u+m\n",
@@ -100,9 +96,8 @@
     "\n",
     "    def get_rightBuffer(self,u,v,size_t,size_g):\n",
     "        right_buffer = []\n",
-    "        radius_t = int(size_t/2)\n",
-    "        radius_g = int(size_g/2)\n",
-    "        for p in range(radius_t,radius_g+1):\n",
+    "        \n",
+    "        for p in range(size_t,size_g+1):\n",
     "            y = v+p\n",
     "            for m in range(-p,p+1):\n",
     "                x = u+m\n",
@@ -116,18 +111,29 @@
     "\n",
     "        return right_buffer\n",
     "\n",
-    "\n",
-    "    def compute_DV(self):\n",
+    "    \n",
+    "    def computeDVnThreshold(self):\n",
     "        dvi = []\n",
-    "        print(\"Computing DVi..\")\n",
-    "\n",
-    "        for i in tqdm(range(self.img.shape[0])):\n",
-    "            for j in (range(self.img.shape[1])):\n",
+    "        noise_data = []\n",
+    "        print(\"Computing DVi and Threshold..\")\n",
+    "        \n",
+    "        radius_t = int(self.tw/2)\n",
+    "        radius_g = int(self.bw/2)\n",
+    "        rows = self.img.shape[0]\n",
+    "        cols = self.img.shape[1]\n",
+    "        \n",
+    "        for d in tqdm(range(0, rows * cols)):\n",
+    "     \n",
+    "            # Find row and column index\n",
+    "            i = d // cols\n",
+    "            j = d % cols\n",
+    "                \n",
+    "            if self.img[i,j] != 0:\n",
     "                #print(\"hello\")\n",
-    "                win_top_buffer = self.get_topBuffer(i,j,self.tw,self.bw)\n",
-    "                win_bottom_buffer = self.get_bottomBuffer(i,j,self.tw,self.bw)\n",
-    "                win_left_buffer = self.get_leftBuffer(i,j,self.tw,self.bw)\n",
-    "                win_right_buffer = self.get_rightBuffer(i,j,self.tw,self.bw)\n",
+    "                win_top_buffer = self.get_topBuffer(i,j,radius_t,radius_g)\n",
+    "                win_bottom_buffer = self.get_bottomBuffer(i,j,radius_t,radius_g)\n",
+    "                win_left_buffer = self.get_leftBuffer(i,j,radius_t,radius_g)\n",
+    "                win_right_buffer = self.get_rightBuffer(i,j,radius_t,radius_g)\n",
     "\n",
     "                guard_buffer = np.array(\n",
     "\n",
@@ -136,58 +142,66 @@
     "                )\n",
     "\n",
     "                dvi.append((self.img[i][j] - guard_buffer.mean())/guard_buffer.std())\n",
+    "                noise_data.append((guard_buffer.mean()))\n",
+    "            else:\n",
+    "                dvi.append(0)\n",
+    "                noise_data.append(0)\n",
     "\n",
     "        dvi = np.array(dvi).reshape(self.img.shape)\n",
-    "        print(\"Process completed, DV image succesfully Computed.\\n\")\n",
-    "        return dvi\n",
-    "\n",
-    "    def compute_noise(self):\n",
-    "        noise_data = []\n",
-    "\n",
-    "        print(\"Computing P...\")\n",
-    "\n",
-    "        for i in tqdm(range(self.img.shape[0])):\n",
-    "            for j in range(self.img.shape[1]):\n",
-    "\n",
-    "                win_top_buffer = self.get_topBuffer(i,j,self.tw,self.bw)\n",
-    "                win_bottom_buffer = self.get_bottomBuffer(i,j,self.tw,self.bw)\n",
-    "                win_left_buffer = self.get_leftBuffer(i,j,self.tw,self.bw)\n",
-    "                win_right_buffer = self.get_rightBuffer(i,j,self.tw,self.bw)\n",
-    "\n",
-    "                background_buffer = np.array(\n",
-    "\n",
-    "                    [win_top_buffer,win_bottom_buffer,win_left_buffer,win_right_buffer]\n",
-    "\n",
-    "                )\n",
-    "\n",
-    "                #print(guard_buffer)\n",
-    "                #print(guard_buffer.mean())\n",
-    "                noise_data.append(float(background_buffer.mean()))\n",
-    "                \n",
     "        noise_data = (np.array(noise_data))\n",
-    "        #print(noise_data)\n",
     "        P = np.array(self.compute_scaleFactor()*noise_data).reshape(self.img.shape)\n",
-    "        print(\"Process Completed, P image succesfully computed.\\n\")\n",
-    "        return P\n",
+    "        print(\"Process completed, DV image and Threshold Image succesfully Computed.\\n\")\n",
+    "        return dvi,P\n",
+    "\n",
+    "#     def compute_noise(self):\n",
+    "#         noise_data = []\n",
+    "#         radius_t = int(self.tw/2)\n",
+    "#         radius_g = int(self.bw/2)\n",
+    "#         print(\"Computing P...\")\n",
+    "\n",
+    "#         for i in tqdm(range(self.img.shape[0])):\n",
+    "#             for j in range(self.img.shape[1]):\n",
+    "                \n",
+    "#                 win_top_buffer = self.get_topBuffer(i,j,radius_t,radius_g)\n",
+    "#                 win_bottom_buffer = self.get_bottomBuffer(i,j,radius_t,radius_g)\n",
+    "#                 win_left_buffer = self.get_leftBuffer(i,j,radius_t,radius_g)\n",
+    "#                 win_right_buffer = self.get_rightBuffer(i,j,radius_t,radius_g)\n",
+    "\n",
+    "#                 background_buffer = np.array(\n",
+    "\n",
+    "#                     [win_top_buffer,win_bottom_buffer,win_left_buffer,win_right_buffer]\n",
+    "\n",
+    "#                 )\n",
+    "\n",
+    "#                 #print(guard_buffer)\n",
+    "#                 #print(guard_buffer.mean())\n",
+    "#                 noise_data.append(float(background_buffer.mean()))\n",
+    "                \n",
+    "#         noise_data = (np.array(noise_data))\n",
+    "#         #print(noise_data)\n",
+    "#         P = np.array(self.compute_scaleFactor()*noise_data).reshape(self.img.shape)\n",
+    "#         print(\"Process Completed, P image succesfully computed.\\n\")\n",
+    "#         return P\n",
     "    \n",
     "    def compute_scaleFactor(self):\n",
-    "        N = 0\n",
-    "        for b in range(self.tw,self.bw+1):\n",
-    "            if b%2 != 0:\n",
-    "                N += 4*b -4\n",
-    "        return (N*(self.pfa**(-1/N) -1))\n",
+    "#         N = 0\n",
+    "#         for b in range(self.tw,self.bw+1):\n",
+    "#             if b%2 != 0:\n",
+    "#                 N += 4*b -4\n",
+    "#         print(N)\n",
+    "        #return (N*(self.pfa**(-1/N) -1))\n",
+    "        return 1\n",
     "    \n",
     "    def shipDetection(self):\n",
     "        final_image = []\n",
     "        \n",
-    "        #T = self.compute_noise()\n",
-    "        T = self.pfa\n",
-    "        DV = self.compute_DV()\n",
+    "        DV,T = self.computeDVnThreshold()\n",
+    "        #T = self.pfa\n",
     "        \n",
     "        for i in range(self.img.shape[0]):\n",
     "            for j in range(self.img.shape[1]):\n",
     "                \n",
-    "                if DV[i][j] > T:\n",
+    "                if DV[i][j] > T[i][j]:\n",
     "                    \n",
     "                    final_image.append(1)\n",
     "                else:\n",
@@ -195,7 +209,14 @@
     "        \n",
     "        final_image = np.array(final_image).reshape(self.img.shape)\n",
     "        print(\"Binary Image of Ships is Succesfully Generated.\\n\")\n",
-    "        return final_image,DV,T"
+    "        return final_image,DV,T\n",
+    "    \n",
+    "    def computeN(self):\n",
+    "        N = 0\n",
+    "        for b in range(self.tw,self.bw+1):\n",
+    "            if b%2 != 0:\n",
+    "                N += 4*b -4\n",
+    "        return N"
    ]
   }
  ],
