--- a/AdaptiveThresholdAlgo/GeneticApproach/CFAR_v2.ipynb
+++ b/AdaptiveThresholdAlgo/GeneticApproach/CFAR_v2.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,10 @@
     "        self.gw = gw\n",
     "        self.bw = bw\n",
     "        self.pfa = pfa\n",
-    "        print(\"Kernel Ready.\")\n",
+    "        self.dvi = []\n",
+    "        self.noise_data = []\n",
+    "        self.final_image = []\n",
+    "        #print(\"Kernel Ready.\")\n",
     "           \n",
     "    #checking if the pixel exists\n",
     "    def isPixelexists(self,size_img,a,b):\n",
@@ -113,47 +116,43 @@
     "\n",
     "    \n",
     "    def computeDVnThreshold(self):\n",
-    "        dvi = []\n",
-    "        noise_data = []\n",
-    "        print(\"Computing DVi and Threshold..\")\n",
+    "        #print(\"Computing DVi and Threshold..\")\n",
     "        \n",
     "        radius_t = int(self.tw/2)\n",
     "        radius_g = int(self.bw/2)\n",
     "        rows = self.img.shape[0]\n",
     "        cols = self.img.shape[1]\n",
     "        \n",
-    "        for i in tqdm(range(self.img.shape[0])):\n",
-    "            for j in range(self.img.shape[1]):\n",
-    "                #print((self.img[i,j]))\n",
+    "        for d in (range(0, rows * cols)):\n",
     "     \n",
-    "                # Find row and column index\n",
-    "    #             i = d // cols\n",
-    "    #             j = d % cols\n",
+    "            # Find row and column index\n",
+    "            i = d // cols\n",
+    "            j = d % cols\n",
+    "                \n",
+    "            if self.img[i,j] != 0:\n",
+    "                #print(\"hello\")\n",
+    "                win_top_buffer = self.get_topBuffer(i,j,radius_t,radius_g)\n",
+    "                win_bottom_buffer = self.get_bottomBuffer(i,j,radius_t,radius_g)\n",
+    "                win_left_buffer = self.get_leftBuffer(i,j,radius_t,radius_g)\n",
+    "                win_right_buffer = self.get_rightBuffer(i,j,radius_t,radius_g)\n",
     "\n",
-    "                if (self.img[i,j]) >= 200:\n",
-    "                    #print(\"hello\")\n",
-    "                    win_top_buffer = self.get_topBuffer(i,j,radius_t,radius_g)\n",
-    "                    win_bottom_buffer = self.get_bottomBuffer(i,j,radius_t,radius_g)\n",
-    "                    win_left_buffer = self.get_leftBuffer(i,j,radius_t,radius_g)\n",
-    "                    win_right_buffer = self.get_rightBuffer(i,j,radius_t,radius_g)\n",
+    "                guard_buffer = np.array(\n",
     "\n",
-    "                    guard_buffer = np.array(\n",
+    "                    [win_top_buffer,win_bottom_buffer,win_left_buffer,win_right_buffer]\n",
     "\n",
-    "                        [win_top_buffer,win_bottom_buffer,win_left_buffer,win_right_buffer]\n",
+    "                )\n",
     "\n",
-    "                    )\n",
+    "                self.dvi.append((self.img[i][j] - guard_buffer.mean())/guard_buffer.std())\n",
+    "                self.noise_data.append((guard_buffer.mean()))\n",
+    "            else:\n",
+    "                self.dvi.append(0)\n",
+    "                self.noise_data.append(0)\n",
     "\n",
-    "                    dvi.append((self.img[i][j] - guard_buffer.mean())/guard_buffer.std())\n",
-    "                    noise_data.append((guard_buffer.mean()))\n",
-    "                else:\n",
-    "                    dvi.append(0)\n",
-    "                    noise_data.append(0)\n",
-    "\n",
-    "        dvi = np.array(dvi).reshape(self.img.shape)\n",
-    "        noise_data = (np.array(noise_data))\n",
-    "        P = np.array(self.compute_scaleFactor()*noise_data).reshape(self.img.shape)\n",
-    "        print(\"Process completed, DV image and Threshold Image succesfully Computed.\\n\")\n",
-    "        return dvi,P\n",
+    "        self.dvi = np.array(self.dvi).reshape(self.img.shape)\n",
+    "        self.noise_data = (np.array(self.noise_data))\n",
+    "        #P = np.array(self.compute_scaleFactor()*noise_data).reshape(self.img.shape)\n",
+    "        #print(\"Process completed, DV image and Threshold Image succesfully Computed.\\n\")\n",
+    "        return self.dvi,self.noise_data\n",
     "\n",
     "#     def compute_noise(self):\n",
     "#         noise_data = []\n",
@@ -195,23 +194,22 @@
     "        return self.pfa\n",
     "    \n",
     "    def shipDetection(self):\n",
-    "        final_image = []\n",
-    "        \n",
+    "               \n",
     "        DV,T = self.computeDVnThreshold()\n",
     "        #T = self.pfa\n",
     "        \n",
-    "        for i in tqdm(range(self.img.shape[0])):\n",
+    "        for i in range(self.img.shape[0]):\n",
     "            for j in range(self.img.shape[1]):\n",
     "                \n",
     "                if DV[i][j] > T[i][j]:\n",
     "                    \n",
-    "                    final_image.append(1)\n",
+    "                    self.final_image.append(1)\n",
     "                else:\n",
-    "                    final_image.append(0) #valid Ships\n",
+    "                    self.final_image.append(0) #valid Ships\n",
     "        \n",
-    "        final_image = np.array(final_image).reshape(self.img.shape)\n",
-    "        print(\"Binary Image of Ships is Succesfully Generated.\\n\")\n",
-    "        return final_image,DV,T\n",
+    "        self.final_image = np.array(self.final_image).reshape(self.img.shape)\n",
+    "        #print(\"Binary Image of Ships is Succesfully Generated.\\n\")\n",
+    "        return final_image\n",
     "    \n",
     "    def computeN(self):\n",
     "        N = 0\n",
