--- a/AdaptiveThresholdAlgo/BilateralCFAR_v2.ipynb
+++ b/AdaptiveThresholdAlgo/BilateralCFAR_v2.ipynb
@@ -2,33 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm as tqdm\n",
+    "import matplotlib.pyplot as plt\n",
+    "from KDEpy import FFTKDE\n",
+    "from scipy.integrate import simps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# CFAR version 2, in this slidin window is created \n",
     "#on the basis of value of the pixel\n",
     "\n",
-    "class CFAR_v2(object):\n",
+    "class BilateralCFAR_v2(object):\n",
     "\n",
     "    #initializing the values\n",
     "    \n",
-    "    def __init__(self,img,tw,gw,bw,pfa):\n",
+    "    def __init__(self,img,tw,gw,bw,pfa,kernel_width):\n",
     "        self.img = img\n",
+    "        self.kernel_width = kernel_width\n",
     "        self.tw = tw\n",
     "        self.gw = gw\n",
     "        self.bw = bw\n",
     "        self.pfa = pfa\n",
+    "        self.spatial_component = []\n",
+    "        self.intensity_component = []\n",
+    "        self.combined_component = []\n",
+    "        self.threshold = []\n",
     "        print(\"Kernel Ready.\")\n",
     "           \n",
     "    #checking if the pixel exists\n",
@@ -112,24 +120,23 @@
     "        return right_buffer\n",
     "\n",
     "    \n",
-    "    def computeDVnThreshold(self):\n",
+    "    def computeSpatialnCombined(self):\n",
     "        dvi = []\n",
+    "        x_spatial = []\n",
     "        noise_data = []\n",
     "        print(\"Computing DVi and Threshold..\")\n",
     "        \n",
-    "        radius_t = int(self.tw/2)\n",
+    "        #radius_t = int(self.tw/2)\n",
+    "        radius_t = 0\n",
     "        radius_g = int(self.bw/2)\n",
     "        rows = self.img.shape[0]\n",
     "        cols = self.img.shape[1]\n",
+    "        x_combined = 0.0\n",
+    "        x_val = 0.0\n",
     "        \n",
     "        for i in tqdm(range(self.img.shape[0])):\n",
     "            for j in range(self.img.shape[1]):\n",
-    "                #print((self.img[i,j]))\n",
-    "     \n",
-    "                # Find row and column index\n",
-    "    #             i = d // cols\n",
-    "    #             j = d % cols\n",
-    "\n",
+    "                \n",
     "                if (self.img[i,j]) > 200:\n",
     "                    #print(\"hello\")\n",
     "                    win_top_buffer = self.get_topBuffer(i,j,radius_t,radius_g)\n",
@@ -137,62 +144,107 @@
     "                    win_left_buffer = self.get_leftBuffer(i,j,radius_t,radius_g)\n",
     "                    win_right_buffer = self.get_rightBuffer(i,j,radius_t,radius_g)\n",
     "\n",
-    "                    guard_buffer = np.array(\n",
+    "                    guard_buffer = np.array(win_top_buffer + win_bottom_buffer + \n",
+    "                                            win_left_buffer + win_right_buffer)\n",
+    "                    \n",
+    "                    \n",
+    "                    \n",
+    "                    x_intensity = (self.img[i,j] - guard_buffer.mean())/guard_buffer.std()\n",
+    "                    \n",
+    "                    n = len(guard_buffer)\n",
+    "                    minimum = 1000\n",
+    "                    maximum = -1000\n",
+    "                    sum_spatial = 0.0\n",
+    "                    #print(n)\n",
+    "            \n",
+    "                    for v in guard_buffer:\n",
+    "                        #print(v)\n",
+    "                        valspa = np.exp((-(self.img[i,j] - v)**2)/(2*(self.kernel_width**2)))\n",
+    "                        #print(\"Valspa: \",valspa)\n",
+    "                        sum_spatial += valspa\n",
+    "                        if valspa < minimum:\n",
+    "                            minimum = valspa\n",
+    "                        elif valspa > maximum:\n",
+    "                            maximum = valspa\n",
+    "                          \n",
+    "                    #print(\"spatial_sum: \",sum_spatial)\n",
+    "                    x_spati = (sum_spatial - minimum)/(maximum - minimum)\n",
+    "                    #print(\"f_spatial: \",(f_spatial))\n",
+    "                    x_spatial.append(x_spati)\n",
+    "                    x_combined = x_spati*x_intensity*(4/(self.bw**2))\n",
+    "                    #print(x_combined)\n",
+    "                    \n",
+    "#                     target_box = np.array(self.get_topBuffer(i,j,0,radius_t)+\n",
+    "#                                          self.get_bottomBuffer(i,j,0,radius_t)+\n",
+    "#                                          self.get_leftBuffer(i,j,0,radius_t)+\n",
+    "#                                          self.get_rightBuffer(i,j,0,radius_t))\n",
     "\n",
-    "                        [win_top_buffer,win_bottom_buffer,win_left_buffer,win_right_buffer]\n",
-    "\n",
-    "                    )\n",
-    "\n",
-    "                    dvi.append((self.img[i][j] - guard_buffer.mean())/guard_buffer.std())\n",
-    "                    noise_data.append((guard_buffer.mean()))\n",
+    "#                     x,y = FFTKDE(kernel=\"gaussian\", bw=\"silverman\").fit(guard_buffer).evaluate()\n",
+    "#                     a,b = FFTKDE(kernel=\"gaussian\", bw=\"silverman\").fit(target_box).evaluate()\n",
+    "#                     plt.plot(x,y)\n",
+    "#                     plt.plot(a,b)\n",
+    "                    #plt.show()\n",
+    "                    dvi.append((x_combined))\n",
+    "                    #noise_data.append((guard_buffer.mean()))\n",
     "                else:\n",
+    "                    x_spatial.append(0)\n",
     "                    dvi.append(0)\n",
-    "                    noise_data.append(0)\n",
-    "\n",
-    "        dvi = np.array(dvi).reshape(self.img.shape)\n",
-    "        noise_data = (np.array(noise_data))\n",
-    "        P = np.array(self.compute_scaleFactor()*noise_data).reshape(self.img.shape)\n",
+    "                    #noise_data.append(0)\n",
+    "        \n",
+    "        self.spatial_component = np.array(x_spatial).reshape(self.img.shape)\n",
+    "        #x_combined = (4/(self.tw**2))*sum(x_combined)\n",
+    "        self.combined_component = np.array(dvi).reshape(self.img.shape)\n",
+    "        #noise_data = (np.array(noise_data))\n",
+    "        #P = np.array(self.compute_scaleFactor()*noise_data).reshape(self.img.shape)\n",
     "        print(\"Process completed, DV image and Threshold Image succesfully Computed.\\n\")\n",
-    "        return dvi,P\n",
+    "        return self.combined_component,self.spatial_component\n",
     "\n",
-    "#     def compute_noise(self):\n",
-    "#         noise_data = []\n",
-    "#         radius_t = int(self.tw/2)\n",
-    "#         radius_g = int(self.bw/2)\n",
-    "#         print(\"Computing P...\")\n",
-    "\n",
-    "#         for i in tqdm(range(self.img.shape[0])):\n",
-    "#             for j in range(self.img.shape[1]):\n",
-    "                \n",
-    "#                 win_top_buffer = self.get_topBuffer(i,j,radius_t,radius_g)\n",
-    "#                 win_bottom_buffer = self.get_bottomBuffer(i,j,radius_t,radius_g)\n",
-    "#                 win_left_buffer = self.get_leftBuffer(i,j,radius_t,radius_g)\n",
-    "#                 win_right_buffer = self.get_rightBuffer(i,j,radius_t,radius_g)\n",
-    "\n",
-    "#                 background_buffer = np.array(\n",
-    "\n",
-    "#                     [win_top_buffer,win_bottom_buffer,win_left_buffer,win_right_buffer]\n",
-    "\n",
-    "#                 )\n",
-    "\n",
-    "#                 #print(guard_buffer)\n",
-    "#                 #print(guard_buffer.mean())\n",
-    "#                 noise_data.append(float(background_buffer.mean()))\n",
-    "                \n",
-    "#         noise_data = (np.array(noise_data))\n",
-    "#         #print(noise_data)\n",
-    "#         P = np.array(self.compute_scaleFactor()*noise_data).reshape(self.img.shape)\n",
-    "#         print(\"Process Completed, P image succesfully computed.\\n\")\n",
-    "#         return P\n",
     "    \n",
-    "    def compute_scaleFactor(self):\n",
-    "#         N = 0\n",
-    "#         for b in range(self.tw,self.bw+1):\n",
-    "#             if b%2 != 0:\n",
-    "#                 N += 4*b -4\n",
-    "#         print(N)\n",
-    "        #return (N*(self.pfa**(-1/N) -1))\n",
-    "        return self.pfa\n",
+    "    def computeThreshold(self):\n",
+    "        \n",
+    "        radius_t = int(self.tw/2)\n",
+    "        radius_g = int(self.bw/2)\n",
+    "        rows = self.img.shape[0]\n",
+    "        cols = self.img.shape[1]\n",
+    "        x_combined = 0.0\n",
+    "        x_val = 0.0\n",
+    "        \n",
+    "        for i in tqdm(range(self.img.shape[0])):\n",
+    "            for j in range(self.img.shape[1]):\n",
+    "                \n",
+    "                if (self.img[i,j]) > 200:\n",
+    "                    #print(\"hello\")\n",
+    "                    win_top_buffer = self.get_topBuffer(i,j,radius_t,radius_g)\n",
+    "                    win_bottom_buffer = self.get_bottomBuffer(i,j,radius_t,radius_g)\n",
+    "                    win_left_buffer = self.get_leftBuffer(i,j,radius_t,radius_g)\n",
+    "                    win_right_buffer = self.get_rightBuffer(i,j,radius_t,radius_g)\n",
+    "\n",
+    "                    guard_buffer = np.array(win_top_buffer + win_bottom_buffer + \n",
+    "                                            win_left_buffer + win_right_buffer)\n",
+    "                    \n",
+    "\n",
+    "                    x,y = FFTKDE(kernel=\"gaussian\", bw=\"silverman\").fit(guard_buffer).evaluate()\n",
+    "                    value = np.array(y[500:])\n",
+    "\n",
+    "                    # Compute the area using the composite trapezoidal rule.\n",
+    "                    area = trapz(value, dx=x[2]-x[1])\n",
+    "                    print(\"area =\", area)\n",
+    "\n",
+    "                    # Compute the area using the composite Simpson's rule.\n",
+    "#                     area = simps(value, dx=x[2]-x[1])\n",
+    "#                     print(\"area =\", area)\n",
+    "                    #plt.plot(x,y)\n",
+    "                    #plt.show()\n",
+    "                    \n",
+    "                    #noise_data.append((guard_buffer.mean()))\n",
+    "                else:\n",
+    "                    x_spatial.append(0)\n",
+    "                    dvi.append(0)\n",
+    "                    #noise_data.append(0)\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        pass\n",
     "    \n",
     "    def shipDetection(self):\n",
     "        final_image = []\n",
@@ -212,14 +264,15 @@
     "        final_image = np.array(final_image).reshape(self.img.shape)\n",
     "        print(\"Binary Image of Ships is Succesfully Generated.\\n\")\n",
     "        return final_image,DV,T\n",
-    "    \n",
-    "    def computeN(self):\n",
-    "        N = 0\n",
-    "        for b in range(self.tw,self.bw+1):\n",
-    "            if b%2 != 0:\n",
-    "                N += 4*b -4\n",
-    "        return N"
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
