--- a/AdaptiveThresholdAlgo/GeoProcess.ipynb
+++ b/AdaptiveThresholdAlgo/GeoProcess.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
     "import math\n",
     "from osgeo import gdal,gdal_array,ogr\n",
     "\n",
-    "DATA_PATH = 'Dataset_963A/'"
+    "DATA_PATH = '/media/prsd/New Volume/Dissertation/'"
    ]
   },
   {
@@ -30,13 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def save_img2Geotiff(img,filename):\n",
     "    r,c = img.shape\n",
-    "    pr_d = gdal.Open(DATA_PATH+'LandMasked_Amplitude_VV.tif')\n",
+    "    pr_d = gdal.Open(DATA_PATH+'Dataset_963A/LandMasked_SubsetAmplitude_VH.tif')\n",
     "    driver = gdal.GetDriverByName(\"GTiff\")\n",
     "    outdata = driver.Create(filename, c, r, 1, gdal.GDT_Float32)\n",
     "    outdata.SetGeoTransform(pr_d.GetGeoTransform())##sets same geotransform as input\n",
@@ -70,7 +70,7 @@
     "    plt.imshow(img,cmap='gray')\n",
     "\n",
     "def getLatLong(img,i,j):\n",
-    "    pr_d = gdal.Open(DATA_PATH+'LandMasked_Amplitude_VV.tif')\n",
+    "    pr_d = gdal.Open(DATA_PATH+'LandMasked_SubsetAmplitude_VH.tif')\n",
     "    xoff, a, b, yoff, d, e = pr_d.GetGeoTransform()\n",
     "    \n",
     "    px = (a * i) + (b * j) + xoff\n",
@@ -78,6 +78,13 @@
     "    \n",
     "    return (px,py)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -96,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
