--- a/AdaptiveThresholdAlgo/BilateralCFAR_v2.ipynb
+++ b/AdaptiveThresholdAlgo/BilateralCFAR_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,12 @@
     "from tqdm import tqdm as tqdm\n",
     "import matplotlib.pyplot as plt\n",
     "from KDEpy import FFTKDE\n",
-    "from scipy.integrate import simps"
+    "from numpy import trapz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,8 @@
     "                    \n",
     "                    \n",
     "                    \n",
-    "                    x_intensity = (self.img[i,j] - guard_buffer.mean())/guard_buffer.std()\n",
+    "                    #x_intensity = (self.img[i,j] - guard_buffer.mean())/guard_buffer.std()\n",
+    "                    x_intensity = self.img[i,j]\n",
     "                    \n",
     "                    n = len(guard_buffer)\n",
     "                    minimum = 1000\n",
@@ -199,9 +200,23 @@
     "        print(\"Process completed, DV image and Threshold Image succesfully Computed.\\n\")\n",
     "        return self.combined_component,self.spatial_component\n",
     "\n",
+    "    def binary_search(self,arr, val, start,end, data,x_offset): \n",
+    "  \n",
+    "        mid = int((start+end)/2)\n",
+    "        #print(mid)\n",
+    "        area = trapz(data[mid:],dx=x_offset)\n",
+    "        #print(area)\n",
+    "        #print(abs(area-val))\n",
+    "        if abs(area - val) < 0.001: \n",
+    "            return mid \n",
+    "        elif area > val: \n",
+    "            return self.binary_search(arr, val, mid, end, data,x_offset) \n",
+    "        elif area < val:\n",
+    "            return self.binary_search(arr, val, start, mid, data,x_offset) \n",
     "    \n",
     "    def computeThreshold(self):\n",
     "        \n",
+    "        threshold = []\n",
     "        radius_t = int(self.tw/2)\n",
     "        radius_g = int(self.bw/2)\n",
     "        rows = self.img.shape[0]\n",
@@ -222,13 +237,15 @@
     "                    guard_buffer = np.array(win_top_buffer + win_bottom_buffer + \n",
     "                                            win_left_buffer + win_right_buffer)\n",
     "                    \n",
-    "\n",
+    "                    \n",
     "                    x,y = FFTKDE(kernel=\"gaussian\", bw=\"silverman\").fit(guard_buffer).evaluate()\n",
-    "                    value = np.array(y[500:])\n",
-    "\n",
+    "                    data = np.array(y)\n",
+    "                    arr = np.array(np.arange(len(data)))\n",
+    "                    threshold_index = self.binary_search(arr,self.pfa,0,len(arr)-1,data,x[2]-x[1])\n",
+    "                    \n",
+    "                    threshold.append(x[threshold_index])\n",
     "                    # Compute the area using the composite trapezoidal rule.\n",
-    "                    area = trapz(value, dx=x[2]-x[1])\n",
-    "                    print(\"area =\", area)\n",
+    "                    \n",
     "\n",
     "                    # Compute the area using the composite Simpson's rule.\n",
     "#                     area = simps(value, dx=x[2]-x[1])\n",
@@ -238,24 +255,22 @@
     "                    \n",
     "                    #noise_data.append((guard_buffer.mean()))\n",
     "                else:\n",
-    "                    x_spatial.append(0)\n",
-    "                    dvi.append(0)\n",
-    "                    #noise_data.append(0)\n",
+    "                    threshold.append(0)\n",
+    "        \n",
+    "        threshold = np.array(threshold).reshape(self.img.shape)\n",
+    "        return threshold\n",
     "        \n",
     "        \n",
-    "        \n",
-    "        pass\n",
-    "    \n",
     "    def shipDetection(self):\n",
     "        final_image = []\n",
     "        \n",
-    "        DV,T = self.computeDVnThreshold()\n",
-    "        #T = self.pfa\n",
+    "        x_combined, x_spatial = self.computeSpatialnCombined()\n",
+    "        threshold = self.computeThreshold()\n",
     "        \n",
     "        for i in tqdm(range(self.img.shape[0])):\n",
     "            for j in range(self.img.shape[1]):\n",
     "                \n",
-    "                if DV[i][j] > T[i][j]:\n",
+    "                if x_combined[i][j] < threshold[i][j]:\n",
     "                    \n",
     "                    final_image.append(1)\n",
     "                else:\n",
@@ -263,7 +278,7 @@
     "        \n",
     "        final_image = np.array(final_image).reshape(self.img.shape)\n",
     "        print(\"Binary Image of Ships is Succesfully Generated.\\n\")\n",
-    "        return final_image,DV,T\n",
+    "        return final_image, x_combined, x_spatial,threshold\n",
     "    "
    ]
   },
