Updated CFAR and Bilateral CFAR with GeoProcess Facility

--- a/AdaptiveThresholdAlgo/MainPackage/CFAR_v2.ipynb
+++ b/AdaptiveThresholdAlgo/MainPackage/CFAR_v2.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "importing Jupyter notebook from GeoProcess.ipynb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import import_ipynb\n",
     "import numpy as np\n",
@@ -24,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +36,7 @@
     "        \n",
     "        if self.masked:\n",
     "            \n",
-    "            self.geoPro = gp.geoProcessing(img,output_path)\n",
+    "            self.geoPro = gp.geoProcessing(img,output_path,True)\n",
     "            self.img = self.geoPro.readGeoTiff()\n",
     "            self.tw = tw\n",
     "            self.gw = gw\n",
@@ -73,7 +65,7 @@
     "            \n",
     "            print(\"Performing land water Segmentation...\")\n",
     "            \n",
-    "            self.geoPro = gp.geoProcessing(img,output_path)\n",
+    "            self.geoPro = gp.geoProcessing(img,output_path,True)\n",
     "            \n",
     "            if \"VH\" in channel:\n",
     "                self.channel = \"VH\"\n",
@@ -92,6 +84,7 @@
     "                #print(self.geoPro.reference_img)\n",
     "                self.img = self.geoPro.readGeoTiff()\n",
     "                self.img[self.img<0] = 0\n",
+    "                self.pixels = 238\n",
     "                \n",
     "            \n",
     "            elif \"VV\" in channel:\n",
@@ -109,7 +102,9 @@
     "                self.geoPro.reference_img = self.output_path+\"/LandMasked_VV.tif\"\n",
     "                self.img = self.geoPro.readGeoTiff()\n",
     "                self.img[self.img<0] = 0\n",
-    "                \n",
+    "                self.pixels = 400\n",
+    "            else:\n",
+    "                raise(ValueError)\n",
     "            \n",
     "            print(\"Channel used: \", self.channel)\n",
     "            print(\"Segmented the Image successfully...\")\n",
@@ -234,7 +229,7 @@
     "    #             i = d // cols\n",
     "    #             j = d % cols\n",
     "\n",
-    "                if (self.img[i,j]) > 200:\n",
+    "                if (self.img[i,j]) > self.pixels:\n",
     "                    #print(\"hello\")\n",
     "                    win_top_buffer = self.get_topBuffer(i,j,radius_t,radius_g)\n",
     "                    win_bottom_buffer = self.get_bottomBuffer(i,j,radius_t,radius_g)\n",
@@ -284,7 +279,7 @@
     "        for i in tqdm(range(self.img.shape[0])):\n",
     "            for j in range(self.img.shape[1]):\n",
     "                \n",
-    "                if (self.img[i,j]) > 200:\n",
+    "                if (self.img[i,j]) > self.pixels:\n",
     "                    #print(\"hello\")\n",
     "                    win_top_buffer = self.get_topBuffer(i,j,radius_t,radius_g)\n",
     "                    win_bottom_buffer = self.get_bottomBuffer(i,j,radius_t,radius_g)\n",
@@ -376,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
