--- a/AdaptiveThresholdAlgo/MainPackage/GeoProcess.ipynb
+++ b/AdaptiveThresholdAlgo/MainPackage/GeoProcess.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,8 @@
     "from shapely.geometry import box\n",
     "from qgis.core import QgsRasterLayer\n",
     "from qgis.analysis import QgsRasterCalculatorEntry, QgsRasterCalculator\n",
-    "import os, shutil"
+    "import os, shutil\n",
+    "import easygui"
    ]
   },
   {
@@ -31,13 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "class geoProcessing(object):\n",
     "    \n",
-    "    def __init__(self,reference_img,output_path):\n",
+    "    def __init__(self,reference_img,output_path,vectorlayer=False):\n",
     "        \n",
     "        \n",
     "        ### reference img = rasterfile main image path\n",
@@ -48,7 +49,9 @@
     "        self.reference_img = reference_img\n",
     "        self.outputPath = output_path\n",
     "        self.currImage = np.array([])\n",
-    "        self.shapefile = '/media/prsd/New Volume/Dissertation/Dataset_963A/buffershapeFile/gshhgVectorData/gshhgVectorLayerBuffered.shp'\n",
+    "        if vectorlayer:\n",
+    "            vectorPath = easygui.fileopenbox()\n",
+    "            self.shapefile = vectorPath\n",
     "\n",
     "\n",
     "    def save_img2Geotiff(self,img,filename):\n",
@@ -212,7 +215,7 @@
     "        source_ds = ogr.Open(_in)\n",
     "        source_layer = source_ds.GetLayer()\n",
     "\n",
-    "        source_ds_extent = ogr.Open(self.outputPath+\"/temp/Difference.shp\")\n",
+    "        source_ds_extent = ogr.Open(self.outputPath+\"/temp/TileBox.shp\")\n",
     "        source_layer_extent = source_ds_extent.GetLayer()\n",
     "\n",
     "        x_min, x_max, y_min, y_max = source_layer_extent.GetExtent()\n",
@@ -230,7 +233,7 @@
     "        _band.SetNoDataValue(NoData_value)\n",
     "\n",
     "        # 5. Rasterize why is the burn value 0... isn't that the same as the background?\n",
-    "        gdal.RasterizeLayer(_raster, [1], source_layer, burn_values=[1])\n",
+    "        gdal.RasterizeLayer(_raster, [1], source_layer, None, None,[1],['ALL_TOUCHED=TRUE'])\n",
     "        \n",
     "        del _raster\n",
     "        del _in\n",
@@ -263,7 +266,7 @@
     "        ras2.bandNumber = 1\n",
     "        enteries.append(ras2)\n",
     "\n",
-    "        calc = QgsRasterCalculator('ras1@1 * ras2@1', output_raster,'GTiff',\n",
+    "        calc = QgsRasterCalculator('((ras1@1 * ras2@1))', output_raster,'GTiff',\n",
     "                                  input_raster1.extent(), input_raster1.width(), input_raster1.height(), enteries)\n",
     "        calc.processCalculation()       \n",
     "        \n",
@@ -286,11 +289,7 @@
     "        outLayer.CreateField(newField)\n",
     "        gdal.Polygonize(band, None, outLayer, 0, [], callback=None )\n",
     "        outDatasource.Destroy()\n",
-    "        sourceRaster = None\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        "
+    "        sourceRaster = None"
    ]
   },
   {
@@ -317,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
