--- a/AdaptiveThresholdAlgo/MainPackage/BilateralCFAR_v2.ipynb
+++ b/AdaptiveThresholdAlgo/MainPackage/BilateralCFAR_v2.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "importing Jupyter notebook from GeoProcess.ipynb\n"
+     ]
+    }
+   ],
    "source": [
     "import import_ipynb\n",
     "import numpy as np\n",
@@ -17,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +45,7 @@
     "        \n",
     "        if self.masked:\n",
     "            \n",
-    "            self.geoPro = gp.geoProcessing(img,output_path)\n",
+    "            self.geoPro = gp.geoProcessing(img,output_path,True)\n",
     "            self.img = self.geoPro.readGeoTiff()\n",
     "        \n",
     "            self.kernel_width = 1\n",
@@ -74,7 +82,7 @@
     "            \n",
     "            print(\"Performing land water Segmentation...\")\n",
     "            \n",
-    "            self.geoPro = gp.geoProcessing(img,output_path)\n",
+    "            self.geoPro = gp.geoProcessing(img,output_path,True)\n",
     "            \n",
     "            if \"VH\" in channel:\n",
     "                self.channel = \"VH\"\n",
@@ -93,6 +101,7 @@
     "                #print(self.geoPro.reference_img)\n",
     "                self.img = self.geoPro.readGeoTiff()\n",
     "                self.img[self.img<0] = 0\n",
+    "                self.pixels = 238\n",
     "                \n",
     "            \n",
     "            elif \"VV\" in channel:\n",
@@ -110,7 +119,9 @@
     "                self.geoPro.reference_img = self.output_path+\"/LandMasked_VV.tif\"\n",
     "                self.img = self.geoPro.readGeoTiff()\n",
     "                self.img[self.img<0] = 0\n",
-    "            \n",
+    "                self.pixels = 400\n",
+    "            else:\n",
+    "                raise(ValueError)\n",
     "            \n",
     "            \n",
     "            print(\"Channel used: \", self.channel)\n",
@@ -239,7 +250,7 @@
     "        for i in tqdm(range(self.img.shape[0])):\n",
     "            for j in range(self.img.shape[1]):\n",
     "                \n",
-    "                if (self.img[i,j]) > 200:\n",
+    "                if (self.img[i,j]) > self.pixels:\n",
     "                    #print(\"hello\")\n",
     "                    win_top_buffer = self.get_topBuffer(i,j,radius_t,radius_g)\n",
     "                    win_bottom_buffer = self.get_bottomBuffer(i,j,radius_t,radius_g)\n",
@@ -320,7 +331,7 @@
     "        for i in tqdm(range(self.img.shape[0])):\n",
     "            for j in range(self.img.shape[1]):\n",
     "                \n",
-    "                if (self.img[i,j]) > 200:\n",
+    "                if (self.img[i,j]) > self.pixels:\n",
     "                    #print(\"hello\")\n",
     "                    win_top_buffer = self.get_topBuffer(i,j,radius_t,radius_g)\n",
     "                    win_bottom_buffer = self.get_bottomBuffer(i,j,radius_t,radius_g)\n",
@@ -391,7 +402,6 @@
     "            \n",
     "            print(\"Shapefile Image Generated.\")\n",
     "        \n",
-    "        \n",
     "        return final_image, x_combined, x_spatial,threshold\n",
     "    "
    ]
@@ -420,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
