--- a/AdaptiveThresholdAlgo/MainPackage/CFARImplementation.ipynb
+++ b/AdaptiveThresholdAlgo/MainPackage/CFARImplementation.ipynb
@@ -24,12 +24,17 @@
    "source": [
     "import import_ipynb\n",
     "import CFAR_v2 as cfarv2\n",
-    "import GeoProcess as gp\n",
-    "import numpy as np\n",
-    "\n",
-    "\n",
-    "DATA_PATH = '/media/prsd/New Volume/Dissertation/Dataset_963A'\n",
-    "OUT_PATH = '/media/prsd/New Volume/Dissertation/Results/StandardCFAR/Test'"
+    "import easygui"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_PATH = easygui.fileopenbox()\n",
+    "OUT_PATH = easygui.diropenbox()"
    ]
   },
   {
@@ -42,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -80,14 +85,14 @@
       "Guard Window Size:  82\n",
       "Background Window Size:  84\n",
       "Probability of false Alarm used:  0.0001\n",
-      "Generation of Output at location:  /media/prsd/New Volume/Dissertation/Results/StandardCFAR/Test\n",
+      "Generation of Output at location:  /media/h_mittal/My Data 2/Dissertation/ASDUSI/processing_outputs/snappy/MainPackage\n",
       "\n",
       "Kernel Ready.\n"
      ]
     }
    ],
    "source": [
-    "cfar_version2 = cfarv2.CFAR_v2(DATA_PATH+\"/terrain_corr_subset_of_S1A_IW_GRDH_1SDV_20200825T010320_20200825T010345_034056_03F420_963A_TC.tif\",\n",
+    "cfar_version2 = cfarv2.CFAR_v2(DATA_PATH,\n",
     "                               targetWindow_size,\n",
     "                               guardWindow_size,\n",
     "                               backgroundWindow_size,\n",
@@ -101,81 +106,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 6/10201 [00:00<03:04, 55.39it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computing DVi Image from target window...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10201/10201 [03:56<00:00, 43.21it/s]\n",
-      "  0%|          | 6/10201 [00:00<02:54, 58.58it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Process completed, DV image succesfully Computed.\n",
-      "\n",
-      "Computing Threshold from background Window...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10201/10201 [02:59<00:00, 56.75it/s]\n",
-      "  0%|          | 31/10201 [00:00<01:07, 151.17it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Threshold Image Successfully computed.\n",
-      "Generating Final Binary Image...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10201/10201 [01:06<00:00, 153.80it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Binary Image of Ships is Succesfully Generated.\n",
-      "\n",
-      "Saving the Images...\n",
-      "Image Saved Succesfully.\n",
-      "Final Image Saved.\n",
-      "Image Saved Succesfully.\n",
-      "DV Image Saved.\n",
-      "Image Saved Succesfully.\n",
-      "Threshold Image Saved.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "result = cfar_version2.shipDetection()"
    ]
@@ -204,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
