--- a/Package/Notebooks/CFARImplementation.ipynb
+++ b/Package/Notebooks/CFARImplementation.ipynb
@@ -77,7 +77,7 @@
       "Raster Mask successfully generated.\n",
       "Creating Land masked image...\n",
       "Land Masking Process compeleted.\n",
-      "Channel used:  VH\n",
+      "Channel used:  VV\n",
       "Segmented the Image successfully...\n",
       "Image Shape: row-10201 col-10596\n",
       "\n",
@@ -85,7 +85,7 @@
       "Guard Window Size:  82\n",
       "Background Window Size:  84\n",
       "Probability of false Alarm used:  0.0001\n",
-      "Generation of Output at location:  /media/h_mittal/My Data 2/Dissertation/ASDUSI/processing_outputs/snappy/MainPackage\n",
+      "Generation of Output at location:  /media/prsd/New Volume1/Dissertation/Results/StandardCFAR\n",
       "\n",
       "Kernel Ready.\n"
      ]
@@ -97,7 +97,7 @@
     "                               guardWindow_size,\n",
     "                               backgroundWindow_size,\n",
     "                               pfa,\n",
-    "                               channel='VH',\n",
+    "                               channel='VV',\n",
     "                               output_path=OUT_PATH,\n",
     "                               visuals=False,\n",
     "                               masked=False,\n",
@@ -106,11 +106,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 6/10201 [00:00<03:04, 55.20it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing DVi Image from target window...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10201/10201 [05:06<00:00, 33.29it/s]\n",
+      "  0%|          | 6/10201 [00:00<02:56, 57.76it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Process completed, DV image succesfully Computed.\n",
+      "\n",
+      "Computing Threshold from background Window...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10201/10201 [03:22<00:00, 50.33it/s]\n",
+      "  0%|          | 29/10201 [00:00<01:09, 145.96it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Threshold Image Successfully computed.\n",
+      "Generating Final Binary Image...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10201/10201 [01:06<00:00, 153.16it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Binary Image of Ships is Succesfully Generated.\n",
+      "\n",
+      "Saving the Images...\n",
+      "Image Saved Succesfully.\n",
+      "Final Image Saved.\n",
+      "Image Saved Succesfully.\n",
+      "DV Image Saved.\n",
+      "Image Saved Succesfully.\n",
+      "Threshold Image Saved.\n",
+      "Shapefile Image Generated.\n"
+     ]
+    }
+   ],
    "source": [
     "result = cfar_version2.shipDetection()"
    ]
@@ -139,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
